Landing page icons aligned to bottom fixed.

--- a/css/global.css
+++ b/css/global.css
@@ -78,7 +78,7 @@ html {
     position: absolute;
     text-align: center;
     left: 0;
-    /* bottom: 70px; */
+    bottom: 2em;
     margin: 0px;
 }
 
